--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
+    <script src="error.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
